@@ -9,6 +9,8 @@
 	field now only logs relay data and no unrelated data
 	+ Summary changed to reflect the changes in mailfilter module
 	+ Added greylist support
+	+ Added authentication for external smarthost
+	+ Added TLS support for external smarthost
 0.12.99
 	+ Add support for reporting
 0.12.2
